--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,26 @@
-<html>
-    <head>
-        <title>{{ title }}</title>
-    </head>
-    <body>
-        <h1>Hello, {{name}}!</h1>
-        <h1>
-                {% if name in users %}
-                    Your age is {{users[name]['age']}}, you are from {{users[name]['country']}}
-                {% else %}
-                    We don't have information about you!
-                {% endif %}
-
-        </h1>
-        The time is {{time}}.
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Flask Blog</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+</head>
+<body>
+    <h1>Welcome to My Flask Blog!</h1>
+    {% for post in posts %}
+        <div class="post">
+            <h2>Post {{post['title']}}</h2>
+            <p><em>Written by {{post['author']}}</em></p>
+            <p>{{post['content']}}</p>
+            <form action="{{ url_for('delete', post_id=post.id) }}" method="post">
+                <button type="submit">Delete</button>
+            </form>
+            <form action="{{ url_for('update', post_id=post.id) }}" method="GET">
+                <button type="submit">Update</button>
+            </form>
+        </div>
+    {% endfor %}
+    <p><a href="/add">Click this to add new post</a></p>
+</body>
 </html>
